--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "framer-motion": "^12.23.12",
     "lil-gui": "^0.20.0",
     "react": "^19.1.1",
